@@ -2,6 +2,11 @@ IN DEVELOPMENT
 
   IMPROVEMENTS:
 
+   * No default ignore rules are applied by bzr - only the rules in .bzrignore
+     are considered. This fixes bugs with default rules being enforced no
+     matter what. The old list of ignore rules from bzr is available by
+     running 'bzr ignore --old-default-rules'.
+
    * Tests updates to ensure proper URL handling, UNICODE support, and
      proper printing when the user's terminal encoding cannot display 
      the path of a file that has been versioned.
